Fixed bugs
Removed the hiding scrollbar code because it was causing issues with the scrolling. worked on the slideshow display.

Also Im trying to make the website responsive to any size screens.

--- a/style.css
+++ b/style.css
@@ -19,19 +19,6 @@ body{
 
 /* Home Page */
 
-.no-scroll-bar{
-    overflow-y: scroll;
-}
-
-.no-scroll-bar::-webkit-scrollbar{
-    display: none;
-}
-
-.no-scroll-bar {
-    -ms-overflow-style: none; 
-    scrollbar-width: none;  
-  }
-
 #header{
     width: 100%;
     height: 100vh;
@@ -138,7 +125,7 @@ nav ul li a:hover::after{
 
 .about-col-2 p{
     padding: 20px;
-    font-size: 20px;
+    font-size: 1.1vw;
     text-align: center;
 }
 
@@ -159,17 +146,17 @@ nav ul li a:hover::after{
     margin: auto;
 }
 
-.staff-row{
+.staff-row {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: nowrap; 
     justify-content: space-between;
-    align-items: center;
+    align-items: center; 
     width: 1000px;
     height: 650px;
 }
 
-.staff-col-1, .staff-col-2{
-    flex-basis: 50%;
+.staff-col-1, .staff-col-2 {
+    flex-basis: 50%; 
 }
 
 .staff-col-2{
@@ -179,5 +166,16 @@ nav ul li a:hover::after{
 .staff-col-1 img{
     width: 100%;
     height: 100%;
-    border-radius: 15px;;
+    border-radius: 15px;
+}
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    text-align: left;
+}
+
+.slideshow-container{
+    padding-top: 20px;
 }
